Fixed overflows & other visual bugs

--- a/styles/AppBar.module.css
+++ b/styles/AppBar.module.css
@@ -1,18 +1,17 @@
 
 .AppBar {
-  width: calc(100% - 22px);
+  width: calc(100vw + 24px);
   height: 64px;
   position: absolute;
   top: 0px;
   left: 0px;
-  padding-left: 24px;
   background-color: rgba(256, 256, 256, 1.0);
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
 .Title {
   font-size: 24px;
-  margin: 8px 0px 0px 0px;
+  padding: 8px 0px 0px 24px;
   font-weight: var(--font-B);
   color: var(--accent-color);
   font-family: var(--font-family);
@@ -20,8 +19,8 @@
 
 .SubTitle {
   font-size: 16px;
+  padding: 0px 0px 0px 24px;
   font-weight: var(--font-A);
-  margin: 0px 0px 0px 0px;
   color: rgba(0, 0, 0, 0.67);
   font-family: var(--font-family);
 }
@@ -29,7 +28,6 @@
 .Icon {
   opacity: 0.87;
   transform: scale(2.4);
-  margin-right: 8px;
   color: black;
   display: flex;
   align-items: center;
@@ -37,7 +35,7 @@
 }
 
 .AppBarContent {
-  width: calc(100% - 22px);
+  width: calc(100% - 24px);
   display: flex;
   justify-content: space-between;
   align-items: center;
