--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,23 +9,22 @@
 
   background-color: var(--background-color);
   zoom: var(--zoom);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 
 body {
-  margin-top: 40px;
+  width: 100%;
+  margin: 40px 0px 0px 10px;
 }
 
 html {
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   overflow-x: hidden;
   font-size: 16px;
   margin: 0px 0px 8px 0px;
-  margin-right: 12px;
   font-weight: var(--font-A);
-  margin-left: 12px;
   color: rgba(0, 0, 0, 0.67);
   font-family: var(--font-family);
 }
